<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:id="@+id/project_card"
    android:layout_height="wrap_content"
    android:background="@drawable/msg_bubble"
    android:layout_marginBottom="10dp"
    android:padding="10dp"
    android:backgroundTint="@color/bg_1c">
    <TextView
        android:id="@+id/project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/txt_0c"
        android:text="@string/company_projectName"
        />
    <TextView
        android:id="@+id/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_title"
        android:textSize="14sp"
        android:textColor="@color/txt_1c"
        android:text="@string/company_projectDescription"
        />
    <TextView
        android:id="@+id/project_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/project_description"
        android:textSize="18sp"
        android:textColor="@color/txt_1c"
        android:text="@string/company_projectRequirements"
        />
    <RelativeLayout
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_requirements"
        android:layout_alignRight="@id/project_title">

        <Button
            android:id="@+id/leave_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/msg_bubble"
            android:backgroundTint="@color/txtAlert_0c"
            android:textColor="@color/txt_0c"
            android:text="@string/company_projectLeave"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/join_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/msg_bubble"
            android:backgroundTint="@color/txtAccent_0c"
            android:textColor="@color/black"
            android:text="@string/company_projectJoin"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/project_people"
        android:layout_width="wrap_content"
        android:maxWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_container"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@id/project_title"
        android:textSize="14sp"
        android:textColor="@color/txt_1c"
        android:textStyle="bold"
        android:text="@string/company_projectPeople"
        android:lines="1"
        android:singleLine="true"
        />

</RelativeLayout>
