<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_0c"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/verify"
                android:textColor="@color/txt_0c"
                android:textSize="40sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/verifyMessage"
                android:textColor="@color/txt_0c"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/verifyEmailMessage"
                android:textColor="@color/txt_0c"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/verify_email_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/verifyNoEmail"
                android:textColor="@color/txt_0c"
                android:textSize="25sp" />

            <Button
                android:id="@+id/verify_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/bg_2c"

                android:paddingVertical="10dp"
                android:text="@string/verifyLogin"
                android:textColor="@color/txt_1c"
                android:textSize="20sp" />
            <Button
                android:id="@+id/verify_resend_email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bg_2c"
                android:paddingVertical="10dp"
                android:text="@string/verifyResend"
                android:textColor="@color/txt_1c"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

