<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/msg_bubble"
    android:backgroundTint="@color/bg_1c"
    android:padding="20dp">


    <TextView
        android:id="@+id/skill_2hat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/txt_0c"
        android:textSize="20sp"
        android:text="@string/skillsPopOut_aboutRemove"/>
    <TextView
        android:id="@+id/skill_shure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/skill_2hat"
        android:textColor="@color/txt_0c"
        android:textSize="14sp"
        android:text="@string/skillsPopOut_areYouSure"/>



        <Button
            android:id="@+id/skill_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/options_sep0"
            android:layout_marginHorizontal="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/skillsPopOut_cancel"
            android:textColor="@color/txt_0c"
            android:background="#0000"/>
        <ImageView
            android:id="@+id/options_sep0"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/skill_cancel_button"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/msg_bubble"
            android:scaleType="fitCenter"
            app:tint="@color/txt_0c" />
        <Button
            android:id="@+id/skill_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_toRightOf="@id/options_sep0"
            android:layout_alignParentRight="true"
            android:text="@string/skillsPopOut_remove"
            android:textColor="@color/txtAlert_0c"
            android:layout_alignParentBottom="true"
            android:background="#0000"/>
</RelativeLayout>