<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contactLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/contactImage"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_user_circle_solid"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:civ_border_color="@color/txt_0c"
        app:civ_border_width="1dp"
        />
    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2.5dp"
        android:layout_toRightOf="@id/contactImage"
        android:textColor="@color/txt_0c"
        android:textSize="18sp"
        android:lines="1"
        android:hint="@string/contactName"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/contactLastMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/contactImage"
        android:layout_below="@id/contactName"
        android:hint="@string/contactLastMessage"
        android:textColor="@color/txt_1c"
        android:textSize="12sp"
        android:lines="1"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/contactLastMsgDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/contactImage"
        android:layout_below="@id/contactLastMsg"
        android:hint="@string/contactLastMessageDate"
        android:textColor="@color/txt_1c"
        android:textSize="12sp"/>

</RelativeLayout>